# 5g-amf-rel19-cpp

./: CMakeLists.txt  LICENSE  README.md
include/common/: logger.h
include/core/: dispatcher.h  event.h  event_loop.h
src/: main.cpp
src/common/: logger.cpp
src/core/: dispatcher.cpp  event_loop.cpp
